\name{NEWS}
\title{NEWS file for the xdotool package}
\encoding{UTF-8}

\section{Changes in version 0.1-2}{
  \itemize{
    \item Add \code{indentDelay} to \code{typeString()}, which is
    \code{FALSE} by default, to emulate white space at start of
    a line WITHOUT delay.

    \item Add \code{windowWithFocus} function.
  }
}