@@ -1,7 +1,7 @@
 Package: xdotool
 Type: Package
 Title: R interface to xdotool command
-Version: 0.1-2
+Version: 0.1-3
 Date: 2016-11-25
 Author: Paul Murrell
 Maintainer: Paul Murrell <paul@stat.auckland.ac.nz>
