@@ -2,6 +2,12 @@
 \title{NEWS file for the xdotool package}
 \encoding{UTF-8}
 
+\section{Changes in version 0.1-3}{
+  \itemize{
+    \item Fix bug when \code{delay} is not specified.
+    Thanks to Marc Lamarine for report.
+  }
+}
 \section{Changes in version 0.1-2}{
   \itemize{
     \item Add \code{indentDelay} to \code{typeString()}, which is
